Cambios para sacar el repo de los DTOs