@@ -58,11 +58,12 @@
 
     <!-- Existing Dependencies -->
 
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
-    </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.30</version>
+          <scope>provided</scope>
+      </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
@@ -71,11 +72,11 @@
       <scope>compile</scope>
     </dependency>
 
-    <dependency>
-      <groupId>com.github.ezequieljsosa</groupId>
-      <artifactId>dds-eval-tp2025</artifactId>
-      <version>0.0.7</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.github.ezequieljsosa</groupId>-->
+<!--      <artifactId>dds-eval-tp2025</artifactId>-->
+<!--      <version>0.0.7</version>-->
+<!--    </dependency>-->
 
 
     <!-- Spring Boot Test -->
@@ -89,17 +90,20 @@
 
   <build>
     <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.2.3</version>
+        </plugin>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-            </exclude>
-          </excludes>
-        </configuration>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+              <forkCount>1</forkCount>
+              <reuseForks>true</reuseForks>
+              <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+          </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
